--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -214,39 +214,63 @@
                     </div>
                   </header>
 
-                  <div class="custom-content zoomable"></div>
+                  <div class="sidecar-bottom-stripe-toolbar">
+                    <div class="sidecar-toolbar-text">
+                      <div class="sidecar-toolbar-text-icon">
+                        <svg class="kui--info-icon" focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
+                          <path d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"></path>
+                          <path d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"></path>
+                        </svg>
+                        <svg class="kui--warning-icon" focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
+                          <path d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 13c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"></path>
+                          <path d="M7.5 4h1v5h-1zm.5 6.2c-.4 0-.8.3-.8.8s.3.8.8.8c.4 0 .8-.3.8-.8s-.4-.8-.8-.8z"></path>
+                        </svg>
+                        <svg class="kui--error-icon" focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
+                          <path d="M14.5 14h-13c-.2 0-.3-.1-.4-.2-.1-.2-.1-.3 0-.5l6.5-12c.1-.3.4-.4.6-.2.1 0 .2.1.2.2l6.5 12c.1.2.1.3 0 .5 0 .1-.2.2-.4.2zM2.3 13h11.3L8 2.5 2.3 13z"></path>
+                          <path d="M7.5 6h1v3.5h-1zm.5 4.8c-.4 0-.8.3-.8.8s.3.8.8.8c.4 0 .8-.3.8-.8s-.4-.8-.8-.8z"></path>
+                        </svg>
+                      </div>
+                      <div class="sidecar-toolbar-text-content"></div>
+                    </div>
+                    <!-- flush-right buttons go here -->
+                    <div class="sidecar-bottom-stripe-mode-bits sidecar-bottom-stripe-button-container"></div>
+                  </div>
 
-                  <div class="sidecar-content zoomable">
-                    <div class="hook-for-third-party-content no-content"></div>
-                    <div class="action-content">
-                      <pre>
+                  <div class="sidecar-content-container">
+                    <div class="custom-content zoomable"></div>
+
+                    <div class="sidecar-content zoomable">
+                      <div class="hook-for-third-party-content no-content"></div>
+                      <div class="action-content">
+                        <pre>
                         <code class="action-source"></code>
                       </pre>
-                      <div class="sequence-components" data-base-class="sequence-components"></div>
-                    </div>
-                    <div class="activation-content">
-                      <pre>
+                        <div class="sequence-components" data-base-class="sequence-components"></div>
+                      </div>
+                      <div class="activation-content">
+                        <pre>
                         <code class="activation-result json"></code>
                       </pre>
-                    </div>
-                    <div class="rule-content">
-                      <div class="rule-components small-node-count-canvas horizontal-canvas"></div>
-                    </div>
-                    <div class="package-content">
-                      <div class="result-as-table">
-                        <div class="package-action-list repl-result result-table"></div>
                       </div>
-                      <div class="result-as-table">
-                        <div class="package-feed-list repl-result result-table"></div>
+                      <div class="rule-content">
+                        <div class="rule-components small-node-count-canvas horizontal-canvas"></div>
                       </div>
-                      <pre>
+                      <div class="package-content">
+                        <div class="result-as-table">
+                          <div class="package-action-list repl-result result-table"></div>
+                        </div>
+                        <div class="result-as-table">
+                          <div class="package-feed-list repl-result result-table"></div>
+                        </div>
+                        <pre>
                         <code class="package-source"></code>
                       </pre>
-                    </div>
-                    <div class="trigger-content">
-                      <pre>
+                      </div>
+                      <div class="trigger-content">
+                        <pre>
                         <code class="trigger-source"></code>
                       </pre>
+                      </div>
                     </div>
                   </div>
 
@@ -272,9 +296,6 @@
                       <div class="sidecar-header-icon-wrapper sidecar-header-icon-wrapper-for-namespace">
                         <span class="package-prefix"></span>
                       </div>
-
-                      <!-- flush-right buttons go here -->
-                      <div class="sidecar-bottom-stripe-mode-bits sidecar-bottom-stripe-button-container"></div>
                     </div>
 
                     <div class="sidecar-bottom-stripe-right-bits">
@@ -288,40 +309,42 @@
                         </div>
                       </div>
 
-                      <!-- maximize button -->
-                      <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize toggle-sidecar-maximization-button">
-                        <span class="maximize-button-label">
-                          <div class="graphical-icon" data-balloon="Expand to full width" data-balloon-length="medium" data-balloon-pos="down-right">
-                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
-                              <path d="M10 1v1h3.3L8.5 6.8l.7.7L14 2.7V6h1V1zM7.5 9.2l-.7-.7L2 13.3V10H1v5h5v-1H2.7z"></path>
-                            </svg>
-                          </div>
-                        </span>
-                        <span class="unmaximize-button-label">
-                          <div class="graphical-icon" data-balloon="Restore split screen" data-balloon-length="medium" data-balloon-pos="down-right">
-                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
-                              <path d="M3 9v1h2.3L1 14.3l.7.7L6 10.7V13h1V9zm10-2V6h-2.3L15 1.7l-.7-.7L10 5.3V3H9v4z"></path>
-                            </svg>
-                          </div>
-                        </span>
-                      </div>
-
-                      <!-- close button -->
-                      <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-close toggle-sidecar-button" data-balloon="Minimize the sidecar" data-balloon-length="long" data-balloon-pos="down-right">
-                        <div class="graphical-icon">
-                          <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
-                            <path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path>
-                          </svg>
+                      <div class="sidecar-window-buttons">
+                        <!-- maximize button -->
+                        <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize toggle-sidecar-maximization-button">
+                          <span class="maximize-button-label">
+                            <div class="graphical-icon" data-balloon="Expand to full width" data-balloon-length="medium" data-balloon-pos="down-right">
+                              <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
+                                <path d="M10 1v1h3.3L8.5 6.8l.7.7L14 2.7V6h1V1zM7.5 9.2l-.7-.7L2 13.3V10H1v5h5v-1H2.7z"></path>
+                              </svg>
+                            </div>
+                          </span>
+                          <span class="unmaximize-button-label">
+                            <div class="graphical-icon" data-balloon="Restore split screen" data-balloon-length="medium" data-balloon-pos="down-right">
+                              <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
+                                <path d="M3 9v1h2.3L1 14.3l.7.7L6 10.7V13h1V9zm10-2V6h-2.3L15 1.7l-.7-.7L10 5.3V3H9v4z"></path>
+                              </svg>
+                            </div>
+                          </span>
                         </div>
-                      </div>
 
-                      <!-- Quit/Done button -->
-                      <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-quit" data-balloon="Close this popup" data-balloon-length="medium" data-balloon-pos="down-right">
-                        <div class="graphical-icon">
-                          <!-- sign out button -->
-                          <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true">
-                            <path d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"></path>
-                          </svg>
+                        <!-- close button -->
+                        <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-close toggle-sidecar-button" data-balloon="Minimize the sidecar" data-balloon-length="long" data-balloon-pos="down-right">
+                          <div class="graphical-icon">
+                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
+                              <path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path>
+                            </svg>
+                          </div>
+                        </div>
+
+                        <!-- Quit/Done button -->
+                        <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-quit" data-balloon="Close" data-balloon-length="medium" data-balloon-pos="down-right">
+                          <div class="graphical-icon">
+                            <!-- sign out button -->
+                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true">
+                              <path d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"></path>
+                            </svg>
+                          </div>
                         </div>
                       </div>
                     </div>
