--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
@@ -28,14 +28,16 @@ body[kui-theme="Dark"] {
   --color-sidecar-border: #1a2024;
 
   --color-stripe-01: #4f565c;
+  --color-sidecar-toolbar-background: #D7DCE3;
 
+  --color-content-divider: #3F4548;
   --color-selection-background: #0074C7;
 
   --color-light-red: hsla(357, 96%, 64%, 50%);
   --color-light-green: hsla(134, 43%, 52%, 50%);
   --color-light-yellow: hsla(46, 98%, 61%, 50%);
 
-  --color-content-divider: #418cff;
+  --color-brand-03: #418cff;
   --color-tag-beta-fill: #202529;
   --color-tag-beta-text: var(--color-text-01);
 
