style: move actions icons to the new toolbar

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -214,6 +214,11 @@
                           </div>
                         </div>
                       </div>
+
+                      <div class="sidecar-bottom-stripe-toolbar">
+                        <!-- flush-right buttons go here -->
+                        <div class="sidecar-bottom-stripe-mode-bits sidecar-bottom-stripe-button-container"></div>
+                      </div>
                     </div>
                   </header>
 
@@ -275,9 +280,6 @@
                       <div class="sidecar-header-icon-wrapper sidecar-header-icon-wrapper-for-namespace">
                         <span class="package-prefix"></span>
                       </div>
-
-                      <!-- flush-right buttons go here -->
-                      <div class="sidecar-bottom-stripe-mode-bits sidecar-bottom-stripe-button-container"></div>
                     </div>
 
                     <div class="sidecar-bottom-stripe-right-bits">
