--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/atelier-seaside.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/atelier-seaside.css
@@ -33,6 +33,9 @@ body[kui-theme="Atelier"] {
   --color-latency-3: #f6e8c3;
   --color-latency-4: #d8b365;
   --color-latency-5: #8c510a;
+
+  --color-screenshot-text:#FFFFFF;
+  --color-screenshot-background:#6EA6FF;
 }
 
 /* atelier seaside dark highlightjs theme */
