--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dracula.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dracula.css
@@ -32,6 +32,9 @@ body[kui-theme="Dracula"] {
   --color-latency-3: #fddbc7;
   --color-latency-4: #ef8a62;
   --color-latency-5: #b2182b;
+
+  --color-screenshot-text:#FFFFFF;
+  --color-screenshot-background:#6EA6FF;
 }
 
 /* dracula highlightjs theme */
