--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/lucario.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/lucario.css
@@ -35,6 +35,9 @@ body[kui-theme="Lucario"] {
   --color-latency-3: #e7d4e8;
   --color-latency-4: #af8dc3;
   --color-latency-5: #762a83;
+
+  --color-screenshot-text:#FFFFFF;
+  --color-screenshot-background:#6EA6FF;
 }
 
 /* atelier seaside dark highlightjs theme */
