--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/paraiso.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/paraiso.css
@@ -31,6 +31,9 @@ body[kui-theme="Paraiso"] {
   --color-latency-3: #fee0b6;
   --color-latency-4: #f1a340;
   --color-latency-5: #b35806;
+
+  --color-screenshot-text:#FFFFFF;
+  --color-screenshot-background:#6EA6FF;
 }
 
 /* paraiso-dark highlightjs theme */
