--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/zenburn.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/zenburn.css
@@ -30,6 +30,9 @@ body[kui-theme="Zenburn"] {
   --color-latency-3: #fee08b;
   --color-latency-4: #fc8d59;
   --color-latency-5: #d73027;
+
+  --color-screenshot-text:#FFFFFF;
+  --color-screenshot-background:#6EA6FF;
 }
 
 /* zenburn hljs theme */
