--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
@@ -40,8 +40,9 @@ body[kui-theme="Dark"] {
   --color-brand-03: #418cff;
   --color-tag-beta-fill: #202529;
   --color-tag-beta-text: var(--color-text-01);
-
   --color-text-02: #b3bac1;
+
+  --color-screenshot-background: var(--color-selection-background);
 
   /* table header row */
   --color-ui-06: #373d42;
