--- a/plugins/plugin-core-support/web/css/screenshot.css
+++ b/plugins/plugin-core-support/web/css/screenshot.css
@@ -18,6 +18,12 @@ body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish sidecar 
   flex: initial;
 }
 
+body {
+  /* provide default values for these color classes */
+  --color-screenshot-background: var(--color-base0D);
+  --color-screenshot-foreground: var(--color-base07);
+}
+
 .screenshot-squish .hide-with-screenshot {
   display: none;
 }
@@ -26,39 +32,64 @@ body.no-tooltips-anywhere [data-balloon]:before,
 body.no-tooltips-anywhere [data-balloon]:after {
   display: none !important;
 }
-
-.screenshot-save-button.green-text:hover {
-  /* override hover effect, so that the icon is green even when hovered,
-   which will be the case after the user clicks save! */
-  color: var(--color-green) !important;
+.screenshot-close-botton svg path {
+  fill: var(--color-screenshot-foreground);
+  stroke: var(--color-screenshot-foreground);
+  transition: fill 150ms ease-in-out;
 }
-.screenshot-save-button.yellow-text:hover {
-  /* same for yellow */
-  color: var(--color-yellow) !important;
+.screenshot-close-botton:hover {
+  cursor: pointer;
+}
+.screenshot-close-botton:hover svg path {
+  fill: var(--color-base0D);
+}
+
+.screenshot-save-button {
+  cursor: pointer;
+  font-size: 0.875em;
+  margin: 0.25em 0;
 }
 
 .screenshot-success-message {
   flex: 1;
+  font-size: 0.875em;
 }
-
-.screenshot-check-icon {
-  position: absolute;
+.screenshot-content {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  margin: 0.5em;
 }
-.screenshot-check-icon svg path {
-  fill: var(--color-ok);
+.screenshot-close {
+  flex-direction: column;
+  margin: 0.5em;
+  display: flex;
+}
+.screenshot-message {
+  flex: 1;
+}
+.screenshot-closing-message {
+  opacity: 0.6;
+  font-size: 0.75em;
+  margin-top: 0.25em;
 }
 
 #screenshot-captured {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  bottom: 1em;
+  right: 1em;
+  width: 25em;
+  height: 6.5em;
   z-index: 5;
-  border: 1px solid var(--color-base04);
+  box-shadow: 0 0 2em var(--color-base01);
+  border: 0.063em solid var(--color-base04);
+  background: var(--color-screenshot-background);
+  color: var(--color-screenshot-foreground);
+  padding-left: 0em;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 0.875em;
+  transition: all 150ms ease-in-out;
 }
 
 #screenshot-captured .sidecar-bottom-stripe {
@@ -68,12 +99,17 @@ body.no-tooltips-anywhere [data-balloon]:after {
 }
 
 #screenshot-captured .screenshot-image {
-  max-width: 100%;
-  min-height: 300px; /* we need some min space to fit the green check and Screenshot copied to clipboard */
-  max-height: 100%;
-  filter: brightness(0.5) grayscale(0.55) contrast(0.85) blur(1px);
+  width: 5.5em;
+  height: 5.5em;
+  margin: 0.5em;
 }
 
 #screenshot-captured .sidecar-bottom-stripe .sidecar-bottom-stripe-button {
   width: 1.375em;
+}
+
+#screenshot-captured .grab-focus.hidden {
+  /* to avoid the "capture escape" element from affecting reflow while
+   it is hidden */
+  width: 0;
 }
