--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -841,6 +841,7 @@ sidecar .sidecar-bottom-stripe-left-bits .sidecar-bottom-stripe-button-container
   /* button container in sidecar bottom stripe */
   flex: 1;
   display: flex;
+  align-items: center;
 }
 sidecar .sidecar-bottom-stripe-left-bits .sidecar-bottom-stripe-button-container.sidecar-bottom-stripe-back-bits {
   /* back button container in sidecar bottom stripe */
@@ -930,7 +931,7 @@ body.os-win32 sidecar .sidecar-bottom-stripe-button-container:hover .sidecar-bot
 sidecar .sidecar-bottom-stripe-back-bits,
 .sidecar-bottom-stripe .fill-container {
   /* back button in sidecar bottom stripe */
-  border-right: 1px inset rgba(128, 128, 128, 0.5);
+  border-right: 1px solid var(--color-table-border2);
   padding-right: 0.475rem;
   margin-right: 0.475rem;
 }
@@ -2169,10 +2170,7 @@ body.subwindow .repl-block {
   background-color: transparent;
 }
 body.subwindow .graphical-icon {
-  font-size: 2.5vmin;
-}
-body.subwindow .sidecar-bottom-stripe-back-button .graphical-icon {
-  font-size: 3vmin;
+  width: 2.5vmin;
 }
 body.subwindow sidecar .sidecar-bottom-stripe {
   font-size: 2vmin;
@@ -2559,10 +2557,18 @@ sidecar.minimized .sidecar-header-icon {
   transform-origin: 0% 0%;
   justify-content: flex-start;
 }
+sidecar.minimized .sidecar-bottom-stripe-left-bits {
+  align-items: unset;
+}
+sidecar.minimized .sidecar-bottom-stripe-left-bits .sidecar-header-icon-wrapper {
+  padding: 0;
+  margin: 0;
+}
 sidecar.minimized header.sidecar-header .sidecar-header-secondary-content,
 sidecar.minimized header.sidecar-header .sidecar-header-right-bits,
 sidecar.minimized .sidecar-header-name,
 sidecar.minimized .custom-content,
+sidecar.minimized .sidecar-header-icon-wrapper-for-namespace,
 sidecar.minimized .sidecar-content,
 sidecar.minimized .sidecar-bottom-stripe-left-bits > div:not(.sidecar-header-icon-wrapper),
 sidecar.minimized .header-right-bits {
@@ -2963,10 +2969,6 @@ body[kui-theme-style="dark"] .sidecar-bottom-stripe {
 }
 .sidecar-bottom-stripe .sidecar-bottom-stripe-button .graphical-icon {
   width: 1.875em;
-}
-.sidecar-bottom-stripe .sidecar-bottom-stripe-button.screenshot-button .graphical-icon {
-  /* this icon is narrower */
-  width: 2.5em;
 }
 .sidecar-bottom-stripe .sidecar-bottom-stripe-button.sidecar-bottom-stripe-button-active {
   border-bottom-color: var(--color-brand-02);
