--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -91,10 +91,7 @@
                           <span class="repl-context"></span>
                           <span class="repl-selection clickable" title="The current selection"></span>
                           <span class="repl-prompt-righty">
-                            <!-- ChevronRight20 -->
-                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true">
-                              <path d="M22 16L12 26l-1.4-1.4 8.6-8.6-8.6-8.6L12 6z"></path>
-                            </svg>
+                            <i class="fas fa-chevron-right"></i>
                           </span>
                         </div>
                         <input type="text" class="repl-input-element" autofocus autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" xxx_no_placeholder="enter your command" />
