fix(packages/app): sidecar screenshot button border disappears
Fixes #2086

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -299,13 +299,15 @@
                     </div>
 
                     <div class="sidecar-bottom-stripe-right-bits">
-                      <!-- screenshot button -->
-                      <div class="sidecar-screenshot-button sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize screenshot-button" data-balloon="Capture Screenshot" data-balloon-length="medium" data-balloon-pos="down-right">
-                        <div class="graphical-icon">
-                          <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true">
-                            <path d="M29 26H3a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h6.46l1.71-2.55A1 1 0 0 1 12 4h8a1 1 0 0 1 .83.45L22.54 7H29a1 1 0 0 1 1 1v17a1 1 0 0 1-1 1zM4 24h24V9h-6a1 1 0 0 1-.83-.45L19.46 6h-6.92l-1.71 2.55A1 1 0 0 1 10 9H4z"></path>
-                            <path d="M16 22a6 6 0 1 1 6-6 6 6 0 0 1-6 6zm0-10a4 4 0 1 0 4 4 4 4 0 0 0-4-4z"></path>
-                          </svg>
+                      <div class="sidecar-non-window-buttons">
+                        <!-- screenshot button -->
+                        <div class="sidecar-screenshot-button sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize screenshot-button" data-balloon="Capture Screenshot" data-balloon-length="medium" data-balloon-pos="down-right">
+                          <div class="graphical-icon">
+                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true">
+                              <path d="M29 26H3a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h6.46l1.71-2.55A1 1 0 0 1 12 4h8a1 1 0 0 1 .83.45L22.54 7H29a1 1 0 0 1 1 1v17a1 1 0 0 1-1 1zM4 24h24V9h-6a1 1 0 0 1-.83-.45L19.46 6h-6.92l-1.71 2.55A1 1 0 0 1 10 9H4z"></path>
+                              <path d="M16 22a6 6 0 1 1 6-6 6 6 0 0 1-6 6zm0-10a4 4 0 1 0 4 4 4 4 0 0 0-4-4z"></path>
+                            </svg>
+                          </div>
                         </div>
                       </div>
 
@@ -329,7 +331,7 @@
                         </div>
 
                         <!-- close button -->
-                        <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-close toggle-sidecar-button" data-balloon="Minimize the sidecar" data-balloon-length="long" data-balloon-pos="down-right">
+                        <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-close toggle-sidecar-button" data-balloon="Minimize" data-balloon-length="small" data-balloon-pos="down-right">
                           <div class="graphical-icon">
                             <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
                               <path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path>
@@ -338,7 +340,7 @@
                         </div>
 
                         <!-- Quit/Done button -->
-                        <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-quit" data-balloon="Close" data-balloon-length="medium" data-balloon-pos="down-right">
+                        <div class="sidecar-bottom-stripe-button sidecar-bottom-stripe-quit" data-balloon="Close" data-balloon-length="small" data-balloon-pos="down-right">
                           <div class="graphical-icon">
                             <!-- sign out button -->
                             <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true">
